# SpaceProgram

./: .gitignore  CMakeLists.txt  Readme.md  project.sublime-project  project.sublime-workspace  workspace.code-workspace
.github/workflows/: cmake-single-platform.yml
Deliverables/: CMakeLists.txt
Deliverables/01_GLWindowTriangle/: CMakeLists.txt  README.md  src.cpp
Deliverables/02_GLSphere/: CMakeLists.txt  README.md  src.cpp
Deliverables/02_GLSphere/rsc/: icosphere.hpp
Deliverables/03_ObjViewer/: CMakeLists.txt  src.cpp  src_b.cpp
Deliverables/03_Scene/resources/: resources.json
Deliverables/03_Scene/resources/entities/: sphere.json
Deliverables/04_Resources/: CMakeLists.txt  README.md  src.cpp
Docs/: Doxyfile.in  ecs.md  index.md  resources.md  systems.md
Docs/doxy/: customdoxygen.css  footer.html  header.html
Engine/: CMakeLists.txt
Engine/_External/: CMakeLists.txt
Engine/_External/glad/: CMakeLists.txt
Engine/include/Engine/: Component.hpp  Engine.hpp  Entity.hpp  EventsManager.hpp  Layer.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  StaticEntity.hpp  System.hpp
Engine/include/Engine/Components/: CmpHandle.hpp  CmpInterface.hpp  Component.hpp
Engine/include/Engine/Core/: Application.hpp  Color.hpp  DataBlock.hpp  DataBuffer.hpp  Lib.hpp  Logging.hpp  Uuid.hpp  Window.hpp  WindowsManager.hpp
Engine/include/Engine/Core/Data/: DataBuffer.hpp  DataType.hpp  Type.hpp  Value.hpp
Engine/include/Engine/Core/Events/: KeyboardEvent.hpp  MouseEvent.hpp  SystemEvent.hpp
Engine/include/Engine/Core/Math/: Constants.hpp  Matrix33.hpp  Matrix44.hpp  Random.hpp
Engine/include/Engine/Core/Maths/: AABB.hpp  Constants.hpp  Euler.hpp  FastTrig.hpp  MathsIO.hpp  Matrix33.hpp  Matrix44.hpp  Quaternion.hpp  RNG.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Xfo.hpp
Engine/include/Engine/Core/System/: Args.hpp  Path.hpp  Platform.hpp
Engine/include/Engine/Data/: Math.hpp
Engine/include/Engine/Graphics/: DrawSurface.hpp  Framebuffer.hpp  Material.hpp  RenderSurface.hpp  RenderTargetSurface.hpp  RenderableSurface.hpp  Renderer.hpp  RendererBackendI.hpp
Engine/include/Engine/Graphics/GL/: GLBuffer.hpp  GLProgram.hpp  GLShader.hpp  GLVAO.hpp  RendererBackendOpenGL.hpp
Engine/include/Engine/Graphics/Vulkan/: RendererBackendVulkan.hpp
Engine/include/Engine/Resources/Static/: Camera.hpp  Cube.hpp
Engine/include/Engine/Runtime/: Camera.hpp  ComponentsSets.hpp  Material.hpp  Texture.hpp
Engine/include/Engine/Runtime/Components/: CPosition.hpp  ComponentsSets.hpp  Mesh.hpp
Engine/include/Engine/Runtime/Events/: SystemEvent.hpp
Engine/include/Engine/Runtime/GUI/: GUIComponentBase.hpp
Engine/include/Engine/Runtime/Geometry/: TriangulatedMesh.hpp
Engine/include/Engine/Scene/: Scene.hpp
Engine/include/Engine/Systems/: RenderSystem.hpp
Engine/src/: Application.cpp  Camera.cpp  Cube.cpp  Engine.cpp  Entity.cpp  GLBuffer.cpp  GLProgram.cpp  GLShader.cpp  GLVAO.cpp  Math.cpp  Maths.cpp  Mesh.cpp  Renderer.cpp  RendererBackendOpenGL.cpp  RendererBackendVulkan.cpp  ResourceManager.cpp  Scene.cpp  Window.cpp  WindowsManager.cpp  checkError.hpp
Tests/: CMakeLists.txt  test_maths.cpp
Tools/AssetsManager/: README.md
Utils/: README.md
Utils/Python/: blender_export.py  obj_to_cpp.py
